--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,5 +20,5 @@ android {
 
 dependencies {
     compile files('libs/android-support-v13.jar')
-    compile files('libs/RootTools.jar')
+    compile files('libs/RootTools-3.4.jar')
 }
