--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,6 @@ android {
 }
 
 dependencies {
-    compile files('libs/android-support-v13.jar')
+    compile 'com.android.support:support-v13:19.+'
     compile files('libs/RootTools-3.4.jar')
 }
