add a service which check for new Application versions

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         </activity>
         <activity android:name="com.grarak.romswitcher.activities.RomSwitcherActivity" />
         <activity android:name="com.grarak.romswitcher.activities.RomInformationActivity" />
+
+        <service android:name=".services.AppUpdaterService" />
     </application>
 
 </manifest>
