--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,20 @@
         android:theme="@style/android:Theme.Holo.Light.DarkActionBar">
         <activity
             android:name="com.grarak.romswitcher.activities.MainActivity"
-            android:label="@string/app_name">
-            <intent-filter>
+            android:label="@string/app_name"
+            android:configChanges="keyboardHidden|orientation|screenSize">
+        <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.grarak.romswitcher.activities.RomSwitcherActivity" />
-        <activity android:name="com.grarak.romswitcher.activities.RomInformationActivity" />
+        <activity
+            android:name="com.grarak.romswitcher.activities.RomSwitcherActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name="com.grarak.romswitcher.activities.RomInformationActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
 
         <service android:name=".services.AppUpdaterService" />
     </application>
