--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
             android:name="com.grarak.romswitcher.activities.MainActivity"
             android:label="@string/app_name"
             android:configChanges="keyboardHidden|orientation|screenSize">
-        <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -30,6 +30,9 @@
             android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity
             android:name="com.grarak.romswitcher.activities.RomInformationActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name="com.grarak.romswitcher.activities.FileBrowserActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
 
         <service android:name=".services.AppUpdaterService" />
