--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -33,6 +34,9 @@
             android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity
             android:name="com.grarak.romswitcher.activities.FileBrowserActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize" />
+        <activity
+            android:name="com.grarak.romswitcher.activities.AppsharingActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
 
         <service android:name=".services.AppUpdaterService" />
