--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,11 @@
 apply plugin: 'android'
 
 android {
-    compileSdkVersion 20
-    buildToolsVersion "20"
+    compileSdkVersion 21
+    buildToolsVersion "21.0.2"
 
     defaultConfig {
+        applicationId "com.grarak.rom.switcher"
         minSdkVersion 14
         targetSdkVersion 21
         versionCode 1
@@ -19,6 +20,6 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-v13:19.+'
-    compile files('libs/RootTools-3.4.jar')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v13:21.0.0'
 }
