--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.grarak.romswitcher">
+    package="com.grarak.rom.switcher">
 
     <uses-permission android:name="android.permission.ACCESS_SUPERUSER" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
@@ -16,9 +16,9 @@
         android:label="@string/app_name"
         android:theme="@style/android:Theme.Holo.Light.DarkActionBar">
         <activity
-            android:name="com.grarak.romswitcher.activities.MainActivity"
-            android:label="@string/app_name"
-            android:configChanges="keyboardHidden|orientation|screenSize">
+            android:name=".activities.MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,16 +26,16 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.grarak.romswitcher.activities.RomSwitcherActivity"
+            android:name=".activities.RomSwitcherActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity
-            android:name="com.grarak.romswitcher.activities.RomInformationActivity"
+            android:name=".activities.RomInformationActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity
-            android:name="com.grarak.romswitcher.activities.FileBrowserActivity"
+            android:name=".activities.FileBrowserActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
         <activity
-            android:name="com.grarak.romswitcher.activities.AppsharingActivity"
+            android:name=".activities.AppsharingActivity"
             android:configChanges="keyboardHidden|orientation|screenSize" />
     </application>
 
